rebrand as Upkarna commit.

--- a/calculators/buy-vs-rent-calculator.html
+++ b/calculators/buy-vs-rent-calculator.html
@@ -6,7 +6,7 @@
   <title>Buy vs Rent Calculator – Compare Buying vs Renting a House</title>
   <meta name="description" content="Free Buy vs Rent Calculator to compare the financial impact of buying vs renting a property. Calculate total costs, investment returns, and make informed decisions." />
   <meta name="keywords" content="buy vs rent calculator, home buying calculator, rent vs buy comparison, property investment, real estate calculator, India">
-  <meta name="author" content="Upkarana Online Tools">
+  <meta name="author" content="Upkarna Online Tools">
   <meta name="robots" content="index, follow">
   <link rel="canonical" href="https://gyanprakash0711.github.io/upkarna-online-tools/calculators/buy-vs-rent-calculator.html">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -96,7 +96,7 @@
 
 <header class="navbar">
   <div class="nav-container">
-    <div class="logo"><a href="../index.html">💰 Upkarana Online Tools</a></div>
+    <div class="logo"><a href="../index.html">💰 Upkarna Online Tools</a></div>
     <nav class="nav-links">
       <a href="../index.html">Home</a>
       <a href="../tools.html">Tools</a>
