--- a/calculators/capital-gains-tax-calculator.html
+++ b/calculators/capital-gains-tax-calculator.html
@@ -7,7 +7,7 @@
   <meta name="description"
         content="Free Capital Gains Tax Calculator to calculate tax on short-term and long-term capital gains from investments in India." />
   <meta name="keywords" content="capital gains tax calculator, LTCG tax, STCG tax, capital gains tax India, investment tax calculator">
-  <meta name="author" content="Upkarana Online Tools">
+  <meta name="author" content="Upkarna Online Tools">
   <meta name="robots" content="index, follow">
   <link rel="canonical" href="https://gyanprakash0711.github.io/upkarna-online-tools/calculators/capital-gains-tax-calculator.html">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -113,7 +113,7 @@
 <!-- NAVBAR -->
 <header class="navbar">
   <div class="nav-container">
-    <div class="logo"><a href="../index.html">💰 Upkarana Online Tools</a></div>
+    <div class="logo"><a href="../index.html">💰 Upkarna Online Tools</a></div>
     <nav class="nav-links">
       <a href="../index.html">Home</a>
       <a href="../tools.html">Tools</a>
