--- a/calculators/car-loan-vs-lease-calculator.html
+++ b/calculators/car-loan-vs-lease-calculator.html
@@ -7,7 +7,7 @@
   <meta name="description"
         content="Free Car Loan vs Lease Calculator to compare auto loan and leasing costs. Calculate monthly payments, total costs, interest, and find which option saves you money." />
   <meta name="keywords" content="car loan vs lease, auto loan calculator, car leasing calculator, buy vs lease car, car finance calculator, vehicle loan">
-  <meta name="author" content="Upkarana Online Tools">
+  <meta name="author" content="Upkarna Online Tools">
   <meta name="robots" content="index, follow">
   <link rel="canonical" href="https://gyanprakash0711.github.io/upkarna-online-tools/calculators/car-loan-vs-lease-calculator.html">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -128,7 +128,7 @@
 <!-- NAVBAR -->
 <header class="navbar">
   <div class="nav-container">
-    <div class="logo"><a href="../index.html">💰 Upkarana Online Tools</a></div>
+    <div class="logo"><a href="../index.html">💰 Upkarna Online Tools</a></div>
     <nav class="nav-links">
       <a href="../index.html">Home</a>
       <a href="../tools.html">Tools</a>
@@ -462,7 +462,7 @@
 
 <footer>
   <div class="container">
-    <p>&copy; 2026 Upkarana Online Tools. All rights reserved.</p>
+    <p>&copy; 2026 Upkarna Online Tools. All rights reserved.</p>
     <p>
       <a href="../privacy-policy.html">Privacy Policy</a> |
       <a href="../contact.html">Contact Us</a> |
