--- a/calculators/credit-card-debt-payoff-calculator.html
+++ b/calculators/credit-card-debt-payoff-calculator.html
@@ -6,7 +6,7 @@
 
   <meta name="description" content="Free Credit Card Debt Payoff Calculator to calculate how long it takes to pay off credit card debt, total interest paid, and payoff schedule." />
   <meta name="keywords" content="credit card debt payoff calculator, debt calculator, credit card payoff, debt management, interest calculator" />
-  <meta name="author" content="Upkarana Online Tools">
+  <meta name="author" content="Upkarna Online Tools">
   <meta name="robots" content="index, follow">
   <link rel="canonical" href="https://gyanprakash0711.github.io/upkarna-online-tools/calculators/credit-card-debt-payoff-calculator.html">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -90,7 +90,7 @@
 <!-- NAVBAR -->
 <header class="navbar">
   <div class="nav-container">
-    <div class="logo"><a href="../index.html">💰 Upkarana Online Tools</a></div>
+    <div class="logo"><a href="../index.html">💰 Upkarna Online Tools</a></div>
     <nav class="nav-links">
       <a href="../index.html">Home</a>
       <a href="../tools.html">Tools</a>
