--- a/calculators/credit-score-impact-simulator.html
+++ b/calculators/credit-score-impact-simulator.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Credit Score Impact Simulator – Simulate Credit Score Changes | Upkarana Online Tools</title>
+  <title>Credit Score Impact Simulator – Simulate Credit Score Changes | Upkarna Online Tools</title>
   <meta name="description" content="Simulate how different financial actions affect your credit score. See the impact of payments, new loans, and credit utilization on your CIBIL score." />
   <meta name="keywords" content="credit score simulator, CIBIL score, credit score impact, credit utilization, payment history, credit score calculator" />
-  <meta name="author" content="Upkarana Online Tools">
+  <meta name="author" content="Upkarna Online Tools">
   <meta name="robots" content="index, follow">
   <link rel="canonical" href="https://gyanprakash0711.github.io/upkarna-online-tools/calculators/credit-score-impact-simulator.html">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -120,7 +120,7 @@
 
 <header class="navbar">
   <div class="nav-container">
-    <div class="logo"><a href="../index.html">💰 Upkarana Online Tools</a></div>
+    <div class="logo"><a href="../index.html">💰 Upkarna Online Tools</a></div>
     <nav class="nav-links">
       <a href="../index.html">Home</a>
       <a href="../tools.html">Tools</a>
@@ -277,7 +277,7 @@
   <div class="ads">Ad Space</div>
 
   <footer>
-    © 2026 Upkarana Online Tools |
+    © 2026 Upkarna Online Tools |
     <a href="../about.html">About</a> |
     <a href="../privacy-policy.html">Privacy Policy</a> |
     <a href="../contact.html">Contact</a>
