--- a/calculators/education-loan-calculator.html
+++ b/calculators/education-loan-calculator.html
@@ -13,7 +13,7 @@
 <body>
     <header class="navbar">
         <div class="nav-container">
-            <div class="logo"><a href="../index.html">💰 Upkarana Online Tools</a></div>
+            <div class="logo"><a href="../index.html">💰 Upkarna Online Tools</a></div>
             <nav class="nav-links">
                 <a href="../index.html">Home</a>
                 <a href="../tools.html">Tools</a>
