--- a/calculators/emi-calculator.html
+++ b/calculators/emi-calculator.html
@@ -6,7 +6,7 @@
   <title>EMI Calculator – Loan EMI Calculator Online</title>
   <meta name="description" content="Free EMI Calculator to calculate loan EMI, total interest and total payment for home, car and personal loans." />
   <meta name="keywords" content="EMI calculator, loan calculator, home loan EMI, car loan EMI, personal loan EMI, interest calculator">
-  <meta name="author" content="Upkarana Online Tools">
+  <meta name="author" content="Upkarna Online Tools">
   <meta name="robots" content="index, follow">
   <link rel="canonical" href="https://gyanprakash0711.github.io/upkarna-online-tools/calculators/emi-calculator.html">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -104,7 +104,7 @@
 <!-- NAVBAR -->
 <header class="navbar">
   <div class="nav-container">
-    <div class="logo"><a href="../index.html">💰 Upkarana Online Tools</a></div>
+    <div class="logo"><a href="../index.html">💰 Upkarna Online Tools</a></div>
     <nav class="nav-links">
       <a href="../index.html">Home</a>
       <a href="../tools.html">Tools</a>
