--- a/calculators/emi-vs-sip-comparison-tool.html
+++ b/calculators/emi-vs-sip-comparison-tool.html
@@ -6,7 +6,7 @@
 
   <meta name="description" content="Free EMI vs SIP Comparison Tool to compare loan EMI payments with SIP investment returns and see which is better for your money." />
   <meta name="keywords" content="EMI vs SIP comparison, loan vs investment, EMI calculator, SIP calculator, financial comparison" />
-  <meta name="author" content="Upkarana Online Tools">
+  <meta name="author" content="Upkarna Online Tools">
   <meta name="robots" content="index, follow">
   <link rel="canonical" href="https://gyanprakash0711.github.io/upkarna-online-tools/calculators/emi-vs-sip-comparison-tool.html">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -106,7 +106,7 @@
 <!-- NAVBAR -->
 <header class="navbar">
   <div class="nav-container">
-    <div class="logo"><a href="../index.html">💰 Upkarana Online Tools</a></div>
+    <div class="logo"><a href="../index.html">💰 Upkarna Online Tools</a></div>
     <nav class="nav-links">
       <a href="../index.html">Home</a>
       <a href="../tools.html">Tools</a>
