--- a/calculators/epf-calculator.html
+++ b/calculators/epf-calculator.html
@@ -7,7 +7,7 @@
   <meta name="description"
         content="Free EPF Calculator to calculate Employee Provident Fund maturity amount, total interest earned, and year-wise breakdown." />
   <meta name="keywords" content="EPF calculator, Employee Provident Fund, EPF maturity, provident fund calculator, retirement savings">
-  <meta name="author" content="Upkarana Online Tools">
+  <meta name="author" content="Upkarna Online Tools">
   <meta name="robots" content="index, follow">
   <link rel="canonical" href="https://gyanprakash0711.github.io/upkarna-online-tools/calculators/epf-calculator.html">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -114,7 +114,7 @@
 <!-- NAVBAR -->
 <header class="navbar">
   <div class="nav-container">
-    <div class="logo"><a href="../index.html">💰 Upkarana Online Tools</a></div>
+    <div class="logo"><a href="../index.html">💰 Upkarna Online Tools</a></div>
     <nav class="nav-links">
       <a href="../index.html">Home</a>
       <a href="../tools.html">Tools</a>
@@ -211,7 +211,7 @@
   <div class="ads">Ad Space</div>
 
   <footer>
-    <p>&copy; 2024 Upkarana Online Tools. All rights reserved. | <a href="../privacy-policy.html">Privacy Policy</a></p>
+    <p>&copy; 2024 Upkarna Online Tools. All rights reserved. | <a href="../privacy-policy.html">Privacy Policy</a></p>
   </footer>
 
 </div>
