--- a/calculators/fire-calculator.html
+++ b/calculators/fire-calculator.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>FIRE Calculator – Financial Independence Retire Early | Upkarana Online Tools</title>
+  <title>FIRE Calculator – Financial Independence Retire Early | Upkarna Online Tools</title>
   <meta name="description" content="Calculate your path to Financial Independence Retire Early (FIRE). Determine your FIRE number, savings rate, and timeline to achieve financial freedom." />
   <meta name="keywords" content="FIRE calculator, financial independence, retire early, FIRE number, passive income, financial freedom" />
-  <meta name="author" content="Upkarana Online Tools">
+  <meta name="author" content="Upkarna Online Tools">
   <meta name="robots" content="index, follow">
   <link rel="canonical" href="https://gyanprakash0711.github.io/upkarna-online-tools/calculators/fire-calculator.html">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -120,7 +120,7 @@
 
 <header class="navbar">
   <div class="nav-container">
-    <div class="logo"><a href="../index.html">💰 Upkarana Online Tools</a></div>
+    <div class="logo"><a href="../index.html">💰 Upkarna Online Tools</a></div>
     <nav class="nav-links">
       <a href="../index.html">Home</a>
       <a href="../tools.html">Tools</a>
@@ -263,7 +263,7 @@
   <div class="ads">Ad Space</div>
 
   <footer>
-    © 2026 Upkarana Online Tools |
+    © 2026 Upkarna Online Tools |
     <a href="../about.html">About</a> |
     <a href="../privacy-policy.html">Privacy Policy</a> |
     <a href="../contact.html">Contact</a>
