--- a/calculators/gratuity-calculator.html
+++ b/calculators/gratuity-calculator.html
@@ -7,7 +7,7 @@
   <meta name="description"
         content="Free Gratuity Calculator to calculate gratuity amount as per Payment of Gratuity Act 1972. Calculate gratuity for government and private sector employees in India." />
   <meta name="keywords" content="gratuity calculator, gratuity calculation, gratuity formula, payment of gratuity act, gratuity amount, India">
-  <meta name="author" content="Upkarana Online Tools">
+  <meta name="author" content="Upkarna Online Tools">
   <meta name="robots" content="index, follow">
   <link rel="canonical" href="https://gyanprakash0711.github.io/upkarna-online-tools/calculators/gratuity-calculator.html">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -114,7 +114,7 @@
 <!-- NAVBAR -->
 <header class="navbar">
   <div class="nav-container">
-    <div class="logo"><a href="../index.html">💰 Upkarana Online Tools</a></div>
+    <div class="logo"><a href="../index.html">💰 Upkarna Online Tools</a></div>
     <nav class="nav-links">
       <a href="../index.html">Home</a>
       <a href="../tools.html">Tools</a>
