--- a/calculators/in-hand-salary-calculator.html
+++ b/calculators/in-hand-salary-calculator.html
@@ -7,7 +7,7 @@
   <meta name="description"
         content="Free In-Hand Salary Calculator to convert CTC to take-home salary. Calculate net monthly salary after EPF, professional tax, income tax, and all deductions in India." />
   <meta name="keywords" content="in-hand salary calculator, CTC to take home, salary calculator India, net salary calculator, CTC calculator, take home pay calculator">
-  <meta name="author" content="Upkarana Online Tools">
+  <meta name="author" content="Upkarna Online Tools">
   <meta name="robots" content="index, follow">
   <link rel="canonical" href="https://gyanprakash0711.github.io/upkarna-online-tools/calculators/in-hand-salary-calculator.html">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -36,7 +36,7 @@
 <!-- NAVBAR -->
 <header class="navbar">
   <div class="nav-container">
-    <div class="logo"><a href="../index.html">💰 Upkarana Online Tools</a></div>
+    <div class="logo"><a href="../index.html">💰 Upkarna Online Tools</a></div>
     <nav class="nav-links">
       <a href="../index.html">Home</a>
       <a href="../tools.html">Tools</a>
@@ -864,7 +864,7 @@
   </div>
 
   <footer>
-    <p>&copy; 2026 Upkarana Online Tools. All rights reserved. | <a href="../privacy-policy.html">Privacy Policy</a></p>
+    <p>&copy; 2026 Upkarna Online Tools. All rights reserved. | <a href="../privacy-policy.html">Privacy Policy</a></p>
   </footer>
 
 </div>
