--- a/calculators/income-tax-calculator.html
+++ b/calculators/income-tax-calculator.html
@@ -7,7 +7,7 @@
   <meta name="description"
         content="Free Income Tax Calculator to compare old and new tax regimes in India. Calculate your tax liability, effective rate, and savings." />
   <meta name="keywords" content="income tax calculator, tax calculator India, old tax regime, new tax regime, tax liability, tax savings">
-  <meta name="author" content="Upkarana Online Tools">
+  <meta name="author" content="Upkarna Online Tools">
   <meta name="robots" content="index, follow">
   <link rel="canonical" href="https://gyanprakash0711.github.io/upkarna-online-tools/calculators/income-tax-calculator.html">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -113,7 +113,7 @@
 <!-- NAVBAR -->
 <header class="navbar">
   <div class="nav-container">
-    <div class="logo"><a href="../index.html">💰 Upkarana Online Tools</a></div>
+    <div class="logo"><a href="../index.html">💰 Upkarna Online Tools</a></div>
     <nav class="nav-links">
       <a href="../index.html">Home</a>
       <a href="../tools.html">Tools</a>
