--- a/calculators/inflation-impact-calculator.html
+++ b/calculators/inflation-impact-calculator.html
@@ -5,7 +5,7 @@
   <title>Inflation Impact Calculator – Calculate Inflation's Effect on Purchasing Power</title>
   <meta name="description" content="Free Inflation Impact Calculator to calculate how inflation affects your money's purchasing power over time. See the real value loss and plan for inflation." />
   <meta name="keywords" content="inflation calculator, purchasing power, inflation impact, real value, inflation rate, cost of living" />
-  <meta name="author" content="Upkarana Online Tools">
+  <meta name="author" content="Upkarna Online Tools">
   <meta name="robots" content="index, follow">
   <link rel="canonical" href="https://gyanprakash0711.github.io/upkarna-online-tools/calculators/inflation-impact-calculator.html">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -128,7 +128,7 @@
 
 <header class="navbar">
   <div class="nav-container">
-    <div class="logo"><a href="../index.html">💰 Upkarana Online Tools</a></div>
+    <div class="logo"><a href="../index.html">💰 Upkarna Online Tools</a></div>
     <nav class="nav-links">
       <a href="../index.html">Home</a>
       <a href="../tools.html">Tools</a>
