--- a/calculators/loan-prepayment-foreclosure-calculator.html
+++ b/calculators/loan-prepayment-foreclosure-calculator.html
@@ -6,7 +6,7 @@
 
   <meta name="description" content="Free Loan Prepayment Foreclosure Calculator to calculate interest savings and benefits of paying off your loan early." />
   <meta name="keywords" content="loan prepayment calculator, foreclosure calculator, early loan repayment, interest savings, loan payoff calculator" />
-  <meta name="author" content="Upkarana Online Tools">
+  <meta name="author" content="Upkarna Online Tools">
   <meta name="robots" content="index, follow">
   <link rel="canonical" href="https://gyanprakash0711.github.io/upkarna-online-tools/calculators/loan-prepayment-foreclosure-calculator.html">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -121,7 +121,7 @@
 <!-- NAVBAR -->
 <header class="navbar">
   <div class="nav-container">
-    <div class="logo"><a href="../index.html">💰 Upkarana Online Tools</a></div>
+    <div class="logo"><a href="../index.html">💰 Upkarna Online Tools</a></div>
     <nav class="nav-links">
       <a href="../index.html">Home</a>
       <a href="../tools.html">Tools</a>
