--- a/calculators/lumpsum-investment-calculator.html
+++ b/calculators/lumpsum-investment-calculator.html
@@ -6,7 +6,7 @@
 
   <meta name="description" content="Free Lumpsum Investment Calculator to calculate the future value of your lump sum investment with compound interest." />
   <meta name="keywords" content="lumpsum investment calculator, lump sum investment, future value calculator, compound interest calculator, investment growth" />
-  <meta name="author" content="Upkarana Online Tools">
+  <meta name="author" content="Upkarna Online Tools">
   <meta name="robots" content="index, follow">
   <link rel="canonical" href="https://gyanprakash0711.github.io/upkarna-online-tools/calculators/lumpsum-investment-calculator.html">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -98,7 +98,7 @@
 <!-- NAVBAR -->
 <header class="navbar">
   <div class="nav-container">
-    <div class="logo"><a href="../index.html">💰 Upkarana Online Tools</a></div>
+    <div class="logo"><a href="../index.html">💰 Upkarna Online Tools</a></div>
     <nav class="nav-links">
       <a href="../index.html">Home</a>
       <a href="../tools.html">Tools</a>
