--- a/calculators/medical-insurance-80d-calculator.html
+++ b/calculators/medical-insurance-80d-calculator.html
@@ -7,7 +7,7 @@
   <meta name="description"
         content="Free Section 80D Calculator to calculate medical insurance tax deduction. Calculate health insurance premium deduction for self, family, and parents under Section 80D of Income Tax Act." />
   <meta name="keywords" content="section 80D calculator, medical insurance tax benefit, health insurance deduction, 80D tax saving, preventive health checkup deduction">
-  <meta name="author" content="Upkarana Online Tools">
+  <meta name="author" content="Upkarna Online Tools">
   <meta name="robots" content="index, follow">
   <link rel="canonical" href="https://gyanprakash0711.github.io/upkarna-online-tools/calculators/medical-insurance-80d-calculator.html">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -122,7 +122,7 @@
 <!-- NAVBAR -->
 <header class="navbar">
   <div class="nav-container">
-    <div class="logo"><a href="../index.html">💰 Upkarana Online Tools</a></div>
+    <div class="logo"><a href="../index.html">💰 Upkarna Online Tools</a></div>
     <nav class="nav-links">
       <a href="../index.html">Home</a>
       <a href="../tools.html">Tools</a>
@@ -431,7 +431,7 @@
   </div>
 
   <footer>
-    <p>&copy; 2026 Upkarana Online Tools. All rights reserved. | <a href="../privacy-policy.html">Privacy Policy</a></p>
+    <p>&copy; 2026 Upkarna Online Tools. All rights reserved. | <a href="../privacy-policy.html">Privacy Policy</a></p>
   </footer>
 
 </div>
