--- a/calculators/mutual-fund-return-calculator.html
+++ b/calculators/mutual-fund-return-calculator.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Mutual Fund Return Calculator – Calculate MF Returns | Upkarana Online Tools</title>
+  <title>Mutual Fund Return Calculator – Calculate MF Returns | Upkarna Online Tools</title>
   <meta name="description" content="Calculate mutual fund returns with SIP and lumpsum investments. Compare different schemes and track your portfolio performance with our free MF return calculator." />
   <meta name="keywords" content="mutual fund return calculator, MF calculator, SIP returns, lumpsum returns, portfolio calculator" />
-  <meta name="author" content="Upkarana Online Tools">
+  <meta name="author" content="Upkarna Online Tools">
   <meta name="robots" content="index, follow">
   <link rel="canonical" href="https://gyanprakash0711.github.io/upkarna-online-tools/calculators/mutual-fund-return-calculator.html">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -120,7 +120,7 @@
 
 <header class="navbar">
   <div class="nav-container">
-    <div class="logo"><a href="../index.html">💰 Upkarana Online Tools</a></div>
+    <div class="logo"><a href="../index.html">💰 Upkarna Online Tools</a></div>
     <nav class="nav-links">
       <a href="../index.html">Home</a>
       <a href="../tools.html">Tools</a>
@@ -259,7 +259,7 @@
   <div class="ads">Ad Space</div>
 
   <footer>
-    © 2026 Upkarana Online Tools |
+    © 2026 Upkarna Online Tools |
     <a href="../about.html">About</a> |
     <a href="../privacy-policy.html">Privacy Policy</a> |
     <a href="../contact.html">Contact</a>
