--- a/calculators/net-worth-calculator.html
+++ b/calculators/net-worth-calculator.html
@@ -6,7 +6,7 @@
 
   <meta name="description" content="Free Net Worth Calculator to calculate your financial net worth by subtracting liabilities from assets." />
   <meta name="keywords" content="net worth calculator, financial net worth, assets and liabilities, wealth calculator, personal finance" />
-  <meta name="author" content="Upkarana Online Tools">
+  <meta name="author" content="Upkarna Online Tools">
   <meta name="robots" content="index, follow">
   <link rel="canonical" href="https://gyanprakash0711.github.io/upkarna-online-tools/calculators/net-worth-calculator.html">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -90,7 +90,7 @@
 <!-- NAVBAR -->
 <header class="navbar">
   <div class="nav-container">
-    <div class="logo"><a href="../index.html">💰 Upkarana Online Tools</a></div>
+    <div class="logo"><a href="../index.html">💰 Upkarna Online Tools</a></div>
     <nav class="nav-links">
       <a href="../index.html">Home</a>
       <a href="../tools.html">Tools</a>
