--- a/calculators/nps-calculator.html
+++ b/calculators/nps-calculator.html
@@ -6,7 +6,7 @@
 
   <meta name="description" content="Free NPS Calculator to calculate National Pension System maturity amount, total contributions, and retirement corpus." />
   <meta name="keywords" content="NPS calculator, National Pension System, retirement calculator, pension calculator, NPS maturity amount, retirement planning" />
-  <meta name="author" content="Upkarana Online Tools">
+  <meta name="author" content="Upkarna Online Tools">
   <meta name="robots" content="index, follow">
   <link rel="canonical" href="https://gyanprakash0711.github.io/upkarna-online-tools/calculators/nps-calculator.html">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -113,7 +113,7 @@
 <!-- NAVBAR -->
 <header class="navbar">
   <div class="nav-container">
-    <div class="logo"><a href="../index.html">💰 Upkarana Online Tools</a></div>
+    <div class="logo"><a href="../index.html">💰 Upkarna Online Tools</a></div>
     <nav class="nav-links">
       <a href="../index.html">Home</a>
       <a href="../tools.html">Tools</a>
@@ -217,7 +217,7 @@
   <div class="ads">Ad Space</div>
 
   <footer>
-    <p>&copy; 2024 Upkarana Online Tools. All rights reserved. | <a href="../privacy-policy.html">Privacy Policy</a></p>
+    <p>&copy; 2024 Upkarna Online Tools. All rights reserved. | <a href="../privacy-policy.html">Privacy Policy</a></p>
   </footer>
 
 </div>
