--- a/calculators/salary-hike-percentage-calculator.html
+++ b/calculators/salary-hike-percentage-calculator.html
@@ -7,7 +7,7 @@
   <meta name="description"
         content="Free Salary Hike Percentage Calculator to calculate salary increment percentage, hike amount, and monthly increase. Compare old vs new salary and analyze your appraisal." />
   <meta name="keywords" content="salary hike calculator, increment calculator, salary increase calculator, appraisal calculator, hike percentage calculator India">
-  <meta name="author" content="Upkarana Online Tools">
+  <meta name="author" content="Upkarna Online Tools">
   <meta name="robots" content="index, follow">
   <link rel="canonical" href="https://gyanprakash0711.github.io/upkarna-online-tools/calculators/salary-hike-percentage-calculator.html">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -138,7 +138,7 @@
 <!-- NAVBAR -->
 <header class="navbar">
   <div class="nav-container">
-    <div class="logo"><a href="../index.html">💰 Upkarana Online Tools</a></div>
+    <div class="logo"><a href="../index.html">💰 Upkarna Online Tools</a></div>
     <nav class="nav-links">
       <a href="../index.html">Home</a>
       <a href="../tools.html">Tools</a>
@@ -682,7 +682,7 @@
   </div>
 
   <footer>
-    <p>&copy; 2026 Upkarana Online Tools. All rights reserved. | <a href="../privacy-policy.html">Privacy Policy</a></p>
+    <p>&copy; 2026 Upkarna Online Tools. All rights reserved. | <a href="../privacy-policy.html">Privacy Policy</a></p>
   </footer>
 
 </div>
