--- a/calculators/sip-calculator.html
+++ b/calculators/sip-calculator.html
@@ -5,7 +5,7 @@
   <title>SIP Calculator – Calculate SIP Returns & Investment Growth</title>
   <meta name="description" content="Free SIP Calculator to calculate Systematic Investment Plan returns. Plan your monthly SIP investment, calculate future value, and see wealth growth over time." />
   <meta name="keywords" content="SIP calculator, systematic investment plan, SIP returns, mutual fund SIP, monthly investment calculator, SIP investment, India">
-  <meta name="author" content="Upkarana Online Tools">
+  <meta name="author" content="Upkarna Online Tools">
   <meta name="robots" content="index, follow">
   <link rel="canonical" href="https://gyanprakash0711.github.io/upkarna-online-tools/calculators/sip-calculator.html">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -86,7 +86,7 @@
 
 <header class="navbar">
   <div class="nav-container">
-    <div class="logo"><a href="../index.html">💰 Upkarana Online Tools</a></div>
+    <div class="logo"><a href="../index.html">💰 Upkarna Online Tools</a></div>
     <nav class="nav-links">
       <a href="../index.html">Home</a>
       <a href="../tools.html">Tools</a>
