--- a/calculators/wealth-goal-calculator.html
+++ b/calculators/wealth-goal-calculator.html
@@ -6,7 +6,7 @@
 
   <meta name="description" content="Free Wealth Goal Calculator to plan your investments and achieve wealth goals like ₹1 Cr or ₹5 Cr. Calculate time to reach target or required monthly investment." />
   <meta name="keywords" content="wealth goal calculator, financial goals, investment planning, wealth building, target amount calculator" />
-  <meta name="author" content="Upkarana Online Tools">
+  <meta name="author" content="Upkarna Online Tools">
   <meta name="robots" content="index, follow">
   <link rel="canonical" href="https://gyanprakash0711.github.io/upkarna-online-tools/calculators/wealth-goal-calculator.html">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -106,7 +106,7 @@
 <!-- NAVBAR -->
 <header class="navbar">
   <div class="nav-container">
-    <div class="logo"><a href="../index.html">💰 Upkarana Online Tools</a></div>
+    <div class="logo"><a href="../index.html">💰 Upkarna Online Tools</a></div>
     <nav class="nav-links">
       <a href="../index.html">Home</a>
       <a href="../tools.html">Tools</a>
