--- a/contact.html
+++ b/contact.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Contact Us - Upkarana Online Tools</title>
-  <meta name="description" content="Get in touch with Upkarana Online Tools. Send us your feedback, suggestions, or questions about our financial calculators." />
+  <title>Contact Us - Upkarna Online Tools</title>
+  <meta name="description" content="Get in touch with Upkarna Online Tools. Send us your feedback, suggestions, or questions about our financial calculators." />
   <meta name="keywords" content="contact, feedback, support, financial calculators">
-  <meta name="author" content="Upkarana Online Tools">
+  <meta name="author" content="Upkarna Online Tools">
   <meta name="robots" content="index, follow">
   <link rel="canonical" href="https://gyanprakash0711.github.io/upkarna-online-tools/contact.html">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -75,7 +75,7 @@
 
 <header class="navbar">
   <div class="nav-container">
-    <div class="logo"><a href="index.html">💰 Upkarana Online Tools</a></div>
+    <div class="logo"><a href="index.html">💰 Upkarna Online Tools</a></div>
     <nav class="nav-links">
       <a href="index.html">Home</a>
       <a href="tools.html">Tools</a>
