--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Upkarana Online Tools – Free Financial Calculators</title>
+  <title>Upkarna Online Tools – Free Financial Calculators</title>
   <meta name="description" content="Free online financial calculators including EMI, SIP, Lumpsum, Net Worth, Credit Card Debt Payoff and Loan tools." />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="keywords" content="financial calculator, EMI calculator, SIP calculator, loan calculator, investment calculator, tax calculator, India">
-  <meta name="author" content="Upkarana Online Tools">
+  <meta name="author" content="Upkarna Online Tools">
   <meta name="robots" content="index, follow">
   <link rel="canonical" href="https://gyanprakash0711.github.io/upkarna-online-tools/">
   <link rel="icon" type="image/x-icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>💰</text></svg>">
@@ -14,14 +14,14 @@
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://gyanprakash0711.github.io/upkarna-online-tools/">
-  <meta property="og:title" content="Upkarana Online Tools – Free Financial Calculators">
+  <meta property="og:title" content="Upkarna Online Tools – Free Financial Calculators">
   <meta property="og:description" content="Free online financial calculators including EMI, SIP, Lumpsum, Net Worth, Credit Card Debt Payoff and Loan tools.">
   <meta property="og:image" content="https://gyanprakash0711.github.io/upkarna-online-tools/">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
   <meta property="twitter:url" content="https://gyanprakash0711.github.io/upkarna-online-tools/">
-  <meta property="twitter:title" content="Upkarana Online Tools – Free Financial Calculators">
+  <meta property="twitter:title" content="Upkarna Online Tools – Free Financial Calculators">
   <meta property="twitter:description" content="Free online financial calculators including EMI, SIP, Lumpsum, Net Worth, Credit Card Debt Payoff and Loan tools.">
   <meta property="twitter:image" content="https://gyanprakash0711.github.io/upkarna-online-tools/">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -84,7 +84,7 @@
 
 <header class="navbar">
   <div class="nav-container">
-    <div class="logo"><a href="index.html">💰 Upkarana Online Tools</a></div>
+    <div class="logo"><a href="index.html">💰 Upkarna Online Tools</a></div>
     <nav class="nav-links">
       <a href="index.html">Home</a>
       <a href="tools.html">Tools</a>
@@ -149,7 +149,7 @@
 
   <div class="content-section">
     <h2>Why Use Our Calculators?</h2>
-    <p>Upkarana Online Tools provides free, accurate and easy-to-use calculators to help you make smarter financial decisions.</p>
+    <p>Upkarna Online Tools provides free, accurate and easy-to-use calculators to help you make smarter financial decisions.</p>
   </div>
 
   <!-- Newsletter Signup -->
@@ -166,7 +166,7 @@
   <div class="ads">Ad Space</div>
 
   <footer>
-    © 2026 Upkarana Online Tools |
+    © 2026 Upkarna Online Tools |
     <a href="about.html">About</a> |
     <a href="privacy-policy.html">Privacy Policy</a> |
     <a href="contact.html">Contact</a>
