--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <title>Privacy Policy</title>
-  <meta name="description" content="Privacy Policy for Upkarana Online Tools. Learn how we collect, use, and protect your personal information." />
+  <meta name="description" content="Privacy Policy for Upkarna Online Tools. Learn how we collect, use, and protect your personal information." />
   <meta name="keywords" content="privacy policy, data protection, personal information, online tools" />
-  <meta name="author" content="Upkarana Online Tools">
+  <meta name="author" content="Upkarna Online Tools">
   <meta name="robots" content="index, follow">
   <link rel="canonical" href="https://gyanprakash0711.github.io/upkarna-online-tools/privacy-policy.html">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -28,7 +28,7 @@
 
 <header class="navbar">
   <div class="nav-container">
-    <div class="logo"><a href="index.html">💰 Upkarana Online Tools</a></div>
+    <div class="logo"><a href="index.html">💰 Upkarna Online Tools</a></div>
     <nav class="nav-links">
       <a href="index.html">Home</a>
       <a href="tools.html">Tools</a>
@@ -46,7 +46,7 @@
   <div class="content-section">
 
     <p>
-      At <strong>Upkarana Online Tools</strong>, accessible from this website, the privacy of our visitors is one of our main priorities.
+      At <strong>Upkarna Online Tools</strong>, accessible from this website, the privacy of our visitors is one of our main priorities.
       This Privacy Policy document contains types of information that are collected and recorded by our website and how we use it.
     </p>
 
