--- a/tools.html
+++ b/tools.html
@@ -6,7 +6,7 @@
   <meta name="description" content="Complete list of free online financial calculators for loans, investments, taxes, and retirement planning in India." />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="keywords" content="financial calculator, EMI calculator, SIP calculator, loan calculator, investment calculator, tax calculator, India">
-  <meta name="author" content="Upkarana Online Tools">
+  <meta name="author" content="Upkarna Online Tools">
   <meta name="robots" content="index, follow">
   <link rel="canonical" href="https://gyanprakash0711.github.io/upkarna-online-tools/tools.html">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -28,7 +28,7 @@
 
 <header class="navbar">
   <div class="nav-container">
-    <div class="logo"><a href="index.html">💰 Upkarana Online Tools</a></div>
+    <div class="logo"><a href="index.html">💰 Upkarna Online Tools</a></div>
     <nav class="nav-links">
       <a href="index.html">Home</a>
       <a href="tools.html">Tools</a>
