--- a/about.html
+++ b/about.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>About Us - Upkarana Online Tools</title>
-  <meta name="description" content="Learn about Upkarana Online Tools - your trusted source for free financial calculators in India including EMI, SIP, tax, and investment tools." />
+  <title>About Us - Upkarna Online Tools</title>
+  <meta name="description" content="Learn about Upkarna Online Tools - your trusted source for free financial calculators in India including EMI, SIP, tax, and investment tools." />
   <meta name="keywords" content="about, financial calculators, EMI calculator, SIP calculator, tax calculator, India">
-  <meta name="author" content="Upkarana Online Tools">
+  <meta name="author" content="Upkarna Online Tools">
   <meta name="robots" content="index, follow">
   <link rel="canonical" href="https://gyanprakash0711.github.io/upkarna-online-tools/about.html">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -29,7 +29,7 @@
 
 <header class="navbar">
   <div class="nav-container">
-    <div class="logo"><a href="index.html">💰 Upkarana Online Tools</a></div>
+    <div class="logo"><a href="index.html">💰 Upkarna Online Tools</a></div>
     <nav class="nav-links">
       <a href="index.html">Home</a>
       <a href="tools.html">Tools</a>
@@ -45,7 +45,7 @@
   <h1>About Us</h1>
 
   <div class="content-section">
-    <p>Upkarana Online Tools is a free financial calculator platform helping users plan loans, investments, retirement and wealth.</p>
+    <p>Upkarna Online Tools is a free financial calculator platform helping users plan loans, investments, retirement and wealth.</p>
     <p>All tools are for educational purposes only.</p>
   </div>
 
