--- a/calculators/break-even-investment-calculator.html
+++ b/calculators/break-even-investment-calculator.html
@@ -5,7 +5,7 @@
   <title>Break-Even Investment Calculator – Calculate Investment Break-Even Point</title>
   <meta name="description" content="Free Break-Even Investment Calculator to calculate when your investment will break even. Find out how long it takes to recover your initial investment amount." />
   <meta name="keywords" content="break even calculator, investment break even, return on investment, break even analysis, investment recovery" />
-  <meta name="author" content="Upkarana Online Tools">
+  <meta name="author" content="Upkarna Online Tools">
   <meta name="robots" content="index, follow">
   <link rel="canonical" href="https://gyanprakash0711.github.io/upkarna-online-tools/calculators/break-even-investment-calculator.html">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -120,7 +120,7 @@
 
 <header class="navbar">
   <div class="nav-container">
-    <div class="logo"><a href="../index.html">💰 Upkarana Online Tools</a></div>
+    <div class="logo"><a href="../index.html">💰 Upkarna Online Tools</a></div>
     <nav class="nav-links">
       <a href="../index.html">Home</a>
       <a href="../tools.html">Tools</a>
