--- a/calculators/fd-calculator.html
+++ b/calculators/fd-calculator.html
@@ -7,7 +7,7 @@
   <meta name="description"
         content="Free FD Calculator to calculate fixed deposit maturity amount, total interest earned, and year-wise breakdown." />
   <meta name="keywords" content="FD calculator, fixed deposit calculator, FD maturity, fixed deposit interest, savings calculator">
-  <meta name="author" content="Upkarana Online Tools">
+  <meta name="author" content="Upkarna Online Tools">
   <meta name="robots" content="index, follow">
   <link rel="canonical" href="https://gyanprakash0711.github.io/upkarna-online-tools/calculators/fd-calculator.html">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -122,7 +122,7 @@
 <!-- NAVBAR -->
 <header class="navbar">
   <div class="nav-container">
-    <div class="logo"><a href="../index.html">💰 Upkarana Online Tools</a></div>
+    <div class="logo"><a href="../index.html">💰 Upkarna Online Tools</a></div>
     <nav class="nav-links">
       <a href="../index.html">Home</a>
       <a href="../tools.html">Tools</a>
