--- a/calculators/hra-calculator.html
+++ b/calculators/hra-calculator.html
@@ -7,7 +7,7 @@
   <meta name="description"
         content="Free HRA Calculator to calculate House Rent Allowance tax exemption as per Income Tax Act. Calculate HRA exemption for metro and non-metro cities in India." />
   <meta name="keywords" content="HRA calculator, house rent allowance, HRA exemption, HRA tax benefit, salary calculator, income tax calculator">
-  <meta name="author" content="Upkarana Online Tools">
+  <meta name="author" content="Upkarna Online Tools">
   <meta name="robots" content="index, follow">
   <link rel="canonical" href="https://gyanprakash0711.github.io/upkarna-online-tools/calculators/hra-calculator.html">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -136,7 +136,7 @@
 <!-- NAVBAR -->
 <header class="navbar">
   <div class="nav-container">
-    <div class="logo"><a href="../index.html">💰 Upkarana Online Tools</a></div>
+    <div class="logo"><a href="../index.html">💰 Upkarna Online Tools</a></div>
     <nav class="nav-links">
       <a href="../index.html">Home</a>
       <a href="../tools.html">Tools</a>
@@ -439,7 +439,7 @@
 
 <footer>
   <div class="container">
-    <p>&copy; 2026 Upkarana Online Tools. All rights reserved.</p>
+    <p>&copy; 2026 Upkarna Online Tools. All rights reserved.</p>
     <p>
       <a href="../privacy-policy.html">Privacy Policy</a> |
       <a href="../contact.html">Contact Us</a> |
