--- a/calculators/loan-eligibility-calculator.html
+++ b/calculators/loan-eligibility-calculator.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Loan Eligibility Calculator – Check Your Loan Eligibility | Upkarana Online Tools</title>
+  <title>Loan Eligibility Calculator – Check Your Loan Eligibility | Upkarna Online Tools</title>
   <meta name="description" content="Calculate your loan eligibility for home loans, personal loans, and car loans. Check EMI affordability and maximum loan amount you can get." />
   <meta name="keywords" content="loan eligibility calculator, home loan eligibility, personal loan eligibility, car loan eligibility, EMI calculator, loan amount" />
-  <meta name="author" content="Upkarana Online Tools">
+  <meta name="author" content="Upkarna Online Tools">
   <meta name="robots" content="index, follow">
   <link rel="canonical" href="https://gyanprakash0711.github.io/upkarna-online-tools/calculators/loan-eligibility-calculator.html">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -120,7 +120,7 @@
 
 <header class="navbar">
   <div class="nav-container">
-    <div class="logo"><a href="../index.html">💰 Upkarana Online Tools</a></div>
+    <div class="logo"><a href="../index.html">💰 Upkarna Online Tools</a></div>
     <nav class="nav-links">
       <a href="../index.html">Home</a>
       <a href="../tools.html">Tools</a>
@@ -290,7 +290,7 @@
   <div class="ads">Ad Space</div>
 
   <footer>
-    © 2026 Upkarana Online Tools |
+    © 2026 Upkarna Online Tools |
     <a href="../about.html">About</a> |
     <a href="../privacy-policy.html">Privacy Policy</a> |
     <a href="../contact.html">Contact</a>
