--- a/calculators/rd-calculator.html
+++ b/calculators/rd-calculator.html
@@ -6,7 +6,7 @@
 
   <meta name="description" content="Free RD Calculator to calculate recurring deposit maturity amount, total interest earned, and month-wise breakdown." />
   <meta name="keywords" content="RD calculator, recurring deposit calculator, RD maturity amount, fixed deposit calculator, savings calculator" />
-  <meta name="author" content="Upkarana Online Tools">
+  <meta name="author" content="Upkarna Online Tools">
   <meta name="robots" content="index, follow">
   <link rel="canonical" href="https://gyanprakash0711.github.io/upkarna-online-tools/calculators/rd-calculator.html">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -121,7 +121,7 @@
 <!-- NAVBAR -->
 <header class="navbar">
   <div class="nav-container">
-    <div class="logo"><a href="../index.html">💰 Upkarana Online Tools</a></div>
+    <div class="logo"><a href="../index.html">💰 Upkarna Online Tools</a></div>
     <nav class="nav-links">
       <a href="../index.html">Home</a>
       <a href="../tools.html">Tools</a>
