--- a/calculators/retirement-planning-calculator.html
+++ b/calculators/retirement-planning-calculator.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Retirement Planning Calculator – Plan Your Retirement | Upkarana Online Tools</title>
+  <title>Retirement Planning Calculator – Plan Your Retirement | Upkarna Online Tools</title>
   <meta name="description" content="Plan your retirement with our comprehensive calculator. Calculate retirement corpus, monthly expenses, and investment requirements for a secure financial future." />
   <meta name="keywords" content="retirement calculator, retirement planning, retirement corpus, pension calculator, financial planning" />
-  <meta name="author" content="Upkarana Online Tools">
+  <meta name="author" content="Upkarna Online Tools">
   <meta name="robots" content="index, follow">
   <link rel="canonical" href="https://gyanprakash0711.github.io/upkarna-online-tools/calculators/retirement-planning-calculator.html">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -120,7 +120,7 @@
 
 <header class="navbar">
   <div class="nav-container">
-    <div class="logo"><a href="../index.html">💰 Upkarana Online Tools</a></div>
+    <div class="logo"><a href="../index.html">💰 Upkarna Online Tools</a></div>
     <nav class="nav-links">
       <a href="../index.html">Home</a>
       <a href="../tools.html">Tools</a>
@@ -276,7 +276,7 @@
   <div class="ads">Ad Space</div>
 
   <footer>
-    © 2026 Upkarana Online Tools |
+    © 2026 Upkarna Online Tools |
     <a href="../about.html">About</a> |
     <a href="../privacy-policy.html">Privacy Policy</a> |
     <a href="../contact.html">Contact</a>
