--- a/calculators/simple-vs-compound-interest-calculator.html
+++ b/calculators/simple-vs-compound-interest-calculator.html
@@ -6,7 +6,7 @@
 
   <meta name="description" content="Free Simple vs Compound Interest Calculator to compare simple interest vs compound interest calculations and see the difference." />
   <meta name="keywords" content="simple vs compound interest calculator, interest comparison, simple interest, compound interest, interest calculator" />
-  <meta name="author" content="Upkarana Online Tools">
+  <meta name="author" content="Upkarna Online Tools">
   <meta name="robots" content="index, follow">
   <link rel="canonical" href="https://gyanprakash0711.github.io/upkarna-online-tools/calculators/simple-vs-compound-interest-calculator.html">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -106,7 +106,7 @@
 <!-- NAVBAR -->
 <header class="navbar">
   <div class="nav-container">
-    <div class="logo"><a href="../index.html">💰 Upkarana Online Tools</a></div>
+    <div class="logo"><a href="../index.html">💰 Upkarna Online Tools</a></div>
     <nav class="nav-links">
       <a href="../index.html">Home</a>
       <a href="../tools.html">Tools</a>
