--- a/calculators/step-up-sip-calculator.html
+++ b/calculators/step-up-sip-calculator.html
@@ -6,7 +6,7 @@
 
   <meta name="description" content="Free Step-Up SIP Calculator to calculate SIP returns with yearly increment, maturity value, total investment and wealth gained." />
   <meta name="keywords" content="step up SIP calculator, SIP calculator, systematic investment plan, increasing SIP, investment calculator" />
-  <meta name="author" content="Upkarana Online Tools">
+  <meta name="author" content="Upkarna Online Tools">
   <meta name="robots" content="index, follow">
   <link rel="canonical" href="https://gyanprakash0711.github.io/upkarna-online-tools/calculators/step-up-sip-calculator.html">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -90,7 +90,7 @@
 <!-- NAVBAR -->
 <header class="navbar">
   <div class="nav-container">
-    <div class="logo"><a href="../index.html">💰 Upkarana Online Tools</a></div>
+    <div class="logo"><a href="../index.html">💰 Upkarna Online Tools</a></div>
     <nav class="nav-links">
       <a href="../index.html">Home</a>
       <a href="../tools.html">Tools</a>
